<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:elevation="@dimen/margin_8dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/country_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country_name"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:textColor="@color/blue"
            android:textSize="25sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/cases"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/death"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/total_recoverd"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/new_cases"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="12sp"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/new_death"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="12sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/country_cases"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/cases"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/country_death"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/death"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/country_recoverd_case"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/total_recoverd"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/country_new_cases"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/new_cases"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/country_new_death"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="@string/new_death"
                android:textStyle="bold"
                android:textColor="@color/blue"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/lightgreytxt" />
</LinearLayout>
